# lfb-2nd-term

./: README.md
lab_0/: README.md
lab_1/: README.md
lab_2/: README.md
lab_3/: README.md
lab_4/: README.md
lab_4/00_hello/: Makefile  hello.cpp
lab_4/01_gk/: Makefile  general.cpp  general.hpp  kenobi.cpp  kenobi.hpp  main.cpp
lab_4/02_htgk/: Makefile  main.cpp
lab_4/03_variables/: Makefile  main.cpp
lab_4/04_tex_easy/: .Makefile.swp  Makefile
lab_5/: README.md
lab_5/00_simple_static_library/: anatoly.cpp  cherdenko.cpp  goodbye.h  mul.h
lab_5/01_another_directory_static_library/: main.cpp
lab_5/02_simple_dynamic_library/: goodbye.cpp  main.cpp
lab_5/03_project_files/: untitled1.cbp
lab_6/: README.md
lab_6/00_smallest_cmake_ever/: CMakeLists.txt  hello.cpp
lab_6/01_simple_static_library/: CMakeLists.txt  anatoly.h  cherdenko.h  main.cpp
lab_6/02_gmsh/: CMakeLists.txt  basic_test_of_gmsh.cpp
lab_6/03_fresh_gmsh/: CMakeLists.txt  example_for_4.12.0.cpp
lab_7/: README.md
lab_7/00_XX_standard_fox/: 00.cpp  01.cpp  02.cpp  03.cpp  04.cpp
lab_7/01_faker/: fakering.py
lab_8/: 00_waiter.cpp  01_waiter_and_file_holder.cpp  02_pid_getter.cpp  03_asynchronous_writing.cpp  03_execute_asynchronously.sh  04_fork.cpp  05_fork_with_memory.cpp  06_pipes.cpp  07_basic_ppm.cpp  07_sorting_pixels.cpp  08_threads.cpp  09_threads_heap.cpp  10_threads_timings.cpp  11_threads_race_condition.cpp  12_threads_atomic.cpp  13_threads_race_condition_atomic.cpp  14_threads_race_condition_fixed.cpp  README.md
